added new action: "go up one level in the url hierarchy"

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -270,6 +270,10 @@
     "message": "Alle Caches neu laden",
     "Name": "Reloads all caches"
   },
+  "actionNameURLLevelUp": {
+    "message": "URL-Hierarchie hoch",
+    "description": "URL hierarchy up"
+  },
 
   "actionDescriptionBookmark": {
     "message": "Fügt ein Lesezeichen hinzu oder entfernt es.",
@@ -386,6 +390,10 @@
   "actionDescriptionReloadAllCaches": {
     "message": "Läd alle Tabs inklusive deren Caches neu.",
     "description": "Reloads all tabs including their cache."
+  },
+  "actionDescriptionURLLevelUp": {
+    "message": "Geht die URL-Hierarchie um eine Ebene hoch.",
+    "description": "Goes up the URL hierarchy for one level."
   },
 
   "gestureInputNotificationInUse": {
