added cancel button when recording a new gesture

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -396,6 +396,11 @@
     "description": "Goes up the URL hierarchy for one level."
   },
 
+  "recordCancelButton": {
+    "message": "Abbrechen",
+    "description": "Cancel"
+  },
+
   "gestureInputNotificationInUse": {
     "message": "Die Geste wird bereits für die Aktion \"$ACTION$\" verwendet.",
     "description": "This gesture is already in use by the \"$ACTION$\" action.",
