--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -395,7 +395,12 @@
     "message": "Goes up the URL hierarchy for one level.",
     "description": "Goes up the URL hierarchy for one level."
   },
-  
+
+  "recordCancelButton": {
+    "message": "Cancel",
+    "description": "Cancel"
+  },
+
   "gestureInputNotificationInUse": {
     "message": "This gesture is already in use by the \"$ACTION$\" action.",
     "description": "This gesture is already in use by the \"$ACTION$\" action.",
