--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1,7 +1,7 @@
 {
   "extensionDescription": {
-    "message": "Allows you to perform various actions through certain mouse gestures on right click.",
-    "description": "Allows you to perform various actions through certain mouse gestures on right click."
+    "message": "Allows you to perform a bunch of actions through custom mouse gestures while holding the right mouse button.",
+    "description": "Allows you to perform a bunch of actions through custom mouse gestures while holding the right mouse button."
   },
 
   "addonUpdateNotificationTitle": {
@@ -274,6 +274,22 @@
     "message": "URL hierarchy up",
     "description": "URL hierarchy up"
   },
+  "actionNameImageToTab": {
+    "message": "Image to tab",
+    "Name": "Image to tab"
+  },
+  "actionNameLinkToForegroundTab": {
+    "message": "Link to foreground tab",
+    "Name": "Link to foreground tab"
+  },
+  "actionNameLinkToBackgroundTab": {
+    "message": "Link to background tab",
+    "Name": "Link to background tab"
+  },
+  "actionNameSearchSelection": {
+    "message": "Search selected text",
+    "description": "Search selected text"
+  },
 
   "actionDescriptionBookmark": {
     "message": "Adds or removes a bookmark.",
@@ -394,6 +410,22 @@
   "actionDescriptionURLLevelUp": {
     "message": "Goes up the URL hierarchy for one level.",
     "description": "Goes up the URL hierarchy for one level."
+  },
+  "actionDescriptionImageToTab": {
+    "message": "Opens the image, where the gesture started, in a new tab.",
+    "Name": "Opens the image, where the gesture started, in a new tab."
+  },
+  "actionDescriptionLinkToForegroundTab": {
+    "message": "Opens the link, where the gesture started, in a new foreground tab.",
+    "Name": "Opens the link, where the gesture started, in a new foreground tab."
+  },
+  "actionDescriptionLinkToBackgroundTab": {
+    "message": "Opens the link, where the gesture started, in a new background tab.",
+    "Name": "Opens the link, where the gesture started, in a new background tab."
+  },
+  "actionDescriptionSearchSelection": {
+    "message": "Starts a web search of the selected text. (currently only google)",
+    "description": "Starts a web search of the selected text."
   },
 
   "recordCancelButton": {
