added the ability to also open selected links in a new tab

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -416,12 +416,12 @@
     "Name": "Opens the image, where the gesture started, in a new tab."
   },
   "actionDescriptionLinkToForegroundTab": {
-    "message": "Öffnet den Link, wo die Geste begann, in einem neuen Vordergrund-Tab.",
-    "Name": "Opens the link, where the gesture started, in a new foreground tab."
+    "message": "Öffnet entweder einen ausgewählten Link, oder den Link wo die Geste begann, in einem neuen Vordergrund-Tab.",
+    "Name": "Opens either a selected link, or the link where the gesture started, in a new foreground tab."
   },
   "actionDescriptionLinkToBackgroundTab": {
-    "message": "Öffnet den Link, wo die Geste begann, in einem neuen Hintergrund-Tab.",
-    "Name": "Opens the link, where the gesture started, in a new background tab."
+    "message": "Öffnet entweder einen ausgewählten Link, oder den Link wo die Geste begann, in einem neuen Hintergrund-Tab.",
+    "Name": "Opens either a selected link, or the link where the gesture started, in a new background tab."
   },
   "actionDescriptionSearchSelection": {
     "message": "Startet eine Websuche des ausgewählten Textes.",
