--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -416,12 +416,12 @@
     "Name": "Opens the image, where the gesture started, in a new tab."
   },
   "actionDescriptionLinkToForegroundTab": {
-    "message": "Opens the link, where the gesture started, in a new foreground tab.",
-    "Name": "Opens the link, where the gesture started, in a new foreground tab."
+    "message": "Opens either a selected link, or the link where the gesture started, in a new foreground tab.",
+    "Name": "Opens either a selected link, or the link where the gesture started, in a new foreground tab."
   },
   "actionDescriptionLinkToBackgroundTab": {
-    "message": "Opens the link, where the gesture started, in a new background tab.",
-    "Name": "Opens the link, where the gesture started, in a new background tab."
+    "message": "Opens either a selected link, or the link where the gesture started, in a new background tab.",
+    "Name": "Opens either a selected link, or the link where the gesture started, in a new background tab."
   },
   "actionDescriptionSearchSelection": {
     "message": "Starts a web search of the selected text. (currently only google)",
