--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -428,6 +428,15 @@
     "description": "Starts a web search of the selected text."
   },
 
+  "toggleButtonOn": {
+    "message": "On",
+    "description": "On - setting checked"
+  },
+  "toggleButtonOff": {
+    "message": "Off",
+    "description": "Off - setting not checked"
+  },
+
   "recordCancelButton": {
     "message": "Zrušit",
     "description": "Cancel"
