--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -428,6 +428,15 @@
     "description": "Starts a web search of the selected text."
   },
 
+  "toggleButtonOn": {
+    "message": "\\5F00",
+    "description": "On - setting checked"
+  },
+  "toggleButtonOff": {
+    "message": "\\5173",
+    "description": "Off - setting not checked"
+  },
+
   "recordCancelButton": {
     "message": "取消",
     "description": "Cancel"
