added clear gesture button while recording

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -437,6 +437,11 @@
     "description": "Off - setting not checked"
   },
 
+  "recordClearButton": {
+    "message": "Löschen",
+    "description": "Clear"
+  },
+
   "recordCancelButton": {
     "message": "Abbrechen",
     "description": "Cancel"
