--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -437,6 +437,11 @@
     "description": "Off - setting not checked"
   },
 
+  "recordClearButton": {
+    "message": "Clear",
+    "description": "Clear"
+  },
+  
   "recordCancelButton": {
     "message": "取消",
     "description": "Cancel"
