--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -431,6 +431,12 @@
     "message": "\\95DC\\9589",
     "description": "Off - setting not checked"
   },
+
+  "recordClearButton": {
+    "message": "Clear",
+    "description": "Clear"
+  },
+  
   "recordCancelButton": {
     "message": "取消",
     "description": "Cancel"
