--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -436,6 +436,11 @@
     "message": "Off",
     "description": "Off - setting not checked"
   },
+  
+  "recordClearButton": {
+    "message": "Clear",
+    "description": "Clear"
+  },
 
   "recordCancelButton": {
     "message": "Zrušit",
