added new actions: close right tabs, close left tabs, close other tabs, save as pdf, print, show print preview; added extras menu button; changed config structure

--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -33,9 +33,30 @@
     "message": "Gesta",
     "description": "Gestures"
   },
+  "navigationExtras": {
+    "message": "Extras",
+    "description": "Extras"
+  },
   "navigationAbout": {
     "message": "O doplňku",
     "description": "About"
+  },
+
+  "settingNameMouseButton": {
+    "message": "Gesture mouse button",
+    "description": "Gesture mouse button"
+  },
+  "settingNameMouseButtonLeft": {
+    "message": "left",
+    "description": "left"
+  },
+  "settingNameMouseButtonRight": {
+    "message": "right",
+    "description": "right"
+  },
+  "settingNameMouseButtonMiddle": {
+    "message": "middle",
+    "description": "middle"
   },
 
   "settingNameDisplayGesture": {
@@ -112,6 +133,10 @@
     "description": "center"
   },
 
+  "settingDescriptionMouseButton": {
+    "message": "The mouse button which will trigger the gesture.",
+    "description": "The mouse button which will trigger the gesture."
+  },
   "settingDescriptionDisplayGesture": {
     "message": "Vykreslí stopu zobrazující pohyb myši.",
     "description": "Draws a path to display the mouse movement."
@@ -290,6 +315,30 @@
     "message": "Hledat vybraný text",
     "description": "Search selected text"
   },
+  "actionNameRemoveRight": {
+    "message": "Remove right tabs",
+    "description": "Remove right tabs"
+  },
+  "actionNameRemoveLeft": {
+    "message": "Remove left tabs",
+    "description": "Remove left tabs"
+  },
+  "actionNameRemoveOther": {
+    "message": "Remove other tabs",
+    "description": "Remove other tabs"
+  },
+  "actionNameSaveAsPDF": {
+    "message": "Saves as PDF",
+    "description": "Saves as PDF"
+  },
+  "actionNamePrint": {
+    "message": "Print",
+    "description": "Print"
+  },
+  "actionNamePrintPreview": {
+    "message": "Print Preview",
+    "description": "Print Preview"
+  },
 
   "actionDescriptionBookmark": {
     "message": "Přidá nebo odebere záložku.",
@@ -427,6 +476,30 @@
     "message": "Spustí vyhledávání vybraného textu. (Zatím jen google)",
     "description": "Starts a web search of the selected text."
   },
+  "actionDescriptionRemoveRight": {
+    "message": "Removes all tabs to the right side.",
+    "description": "Removes all tabs to the right side."
+  },
+  "actionDescriptionRemoveLeft": {
+    "message": "Removes all tabs to the left side, excluding pinned tabs.",
+    "description": "Removes all tabs to the left side, excluding pinned tabs."
+  },
+  "actionDescriptionRemoveOther": {
+    "message": "Remove all tabs except of the current tab and pinned tabs.",
+    "description": "Remove all tabs except of the current tab and pinned tabs."
+  },
+  "actionDescriptionSaveAsPDF": {
+    "message": "Saves the current page as a pdf file.",
+    "description": "Saves the current page as a pdf file."
+  },
+  "actionDescriptionPrint": {
+    "message": "Prints the current page by prompting the print dialog.",
+    "description": "Prints the current page by prompting the print dialog."
+  },
+  "actionDescriptionPrintPreview": {
+    "message": "Opens the print preview of the current page.",
+    "description": "Opens the print preview of the current page."
+  },
 
   "toggleButtonOn": {
     "message": "On",
@@ -436,7 +509,7 @@
     "message": "Off",
     "description": "Off - setting not checked"
   },
-  
+
   "recordClearButton": {
     "message": "Clear",
     "description": "Clear"
