--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -33,14 +33,35 @@
     "message": "Gestures",
     "description": "Gestures"
   },
+  "navigationExtras": {
+    "message": "Extras",
+    "description": "Extras"
+  },
   "navigationAbout": {
     "message": "About",
     "description": "About"
   },
 
+  "settingNameMouseButton": {
+    "message": "Gesture mouse button",
+    "description": "Gesture mouse button"
+  },
+  "settingNameMouseButtonLeft": {
+    "message": "left",
+    "description": "left"
+  },
+  "settingNameMouseButtonRight": {
+    "message": "right",
+    "description": "right"
+  },
+  "settingNameMouseButtonMiddle": {
+    "message": "middle",
+    "description": "middle"
+  },
+
   "settingNameDisplayGesture": {
-    "message": "Display gesture path",
-    "description": "Display gesture path"
+    "message": "Display gesture trace",
+    "description": "Display gesture trace"
   },
   "settingNameGestureColor": {
     "message": "Line color",
@@ -112,9 +133,13 @@
     "description": "center"
   },
 
+  "settingDescriptionMouseButton": {
+    "message": "The mouse button which will trigger the gesture.",
+    "description": "The mouse button which will trigger the gesture."
+  },
   "settingDescriptionDisplayGesture": {
-    "message": "Draws a path to display the mouse movement.",
-    "description": "Draws a path to display the mouse movement."
+    "message": "Draws a trace to display the mouse movement.",
+    "description": "Draws a trace to display the mouse movement."
   },
   "settingDescriptionGestureOpacity": {
     "message": "Accepts any value in the range of 0 (invisible) and 1 (visible).",
@@ -290,6 +315,30 @@
     "message": "Search selected text",
     "description": "Search selected text"
   },
+  "actionNameRemoveRight": {
+    "message": "Remove right tabs",
+    "description": "Remove right tabs"
+  },
+  "actionNameRemoveLeft": {
+    "message": "Remove left tabs",
+    "description": "Remove left tabs"
+  },
+  "actionNameRemoveOther": {
+    "message": "Remove other tabs",
+    "description": "Remove other tabs"
+  },
+  "actionNameSaveAsPDF": {
+    "message": "Saves as PDF",
+    "description": "Saves as PDF"
+  },
+  "actionNamePrint": {
+    "message": "Print",
+    "description": "Print"
+  },
+  "actionNamePrintPreview": {
+    "message": "Print Preview",
+    "description": "Print Preview"
+  },
 
   "actionDescriptionBookmark": {
     "message": "Adds or removes a bookmark.",
@@ -426,6 +475,30 @@
   "actionDescriptionSearchSelection": {
     "message": "Starts a web search of the selected text. (currently only google)",
     "description": "Starts a web search of the selected text."
+  },
+  "actionDescriptionRemoveRight": {
+    "message": "Removes all tabs to the right side.",
+    "description": "Removes all tabs to the right side."
+  },
+  "actionDescriptionRemoveLeft": {
+    "message": "Removes all tabs to the left side, excluding pinned tabs.",
+    "description": "Removes all tabs to the left side, excluding pinned tabs."
+  },
+  "actionDescriptionRemoveOther": {
+    "message": "Remove all tabs except of the current tab and pinned tabs.",
+    "description": "Remove all tabs except of the current tab and pinned tabs."
+  },
+  "actionDescriptionSaveAsPDF": {
+    "message": "Saves the current page as a pdf file.",
+    "description": "Saves the current page as a pdf file."
+  },
+  "actionDescriptionPrint": {
+    "message": "Prints the current page by prompting the print dialog.",
+    "description": "Prints the current page by prompting the print dialog."
+  },
+  "actionDescriptionPrintPreview": {
+    "message": "Opens the print preview of the current page.",
+    "description": "Opens the print preview of the current page."
   },
 
   "toggleButtonOn": {
