--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -33,14 +33,35 @@
     "message": "手势",
     "description": "Gestures"
   },
+  "navigationExtras": {
+    "message": "Extras",
+    "description": "Extras"
+  },
   "navigationAbout": {
     "message": "关于",
     "description": "About"
   },
 
+  "settingNameMouseButton": {
+    "message": "Gesture mouse button",
+    "description": "Gesture mouse button"
+  },
+  "settingNameMouseButtonLeft": {
+    "message": "left",
+    "description": "left"
+  },
+  "settingNameMouseButtonRight": {
+    "message": "right",
+    "description": "right"
+  },
+  "settingNameMouseButtonMiddle": {
+    "message": "middle",
+    "description": "middle"
+  },
+
   "settingNameDisplayGesture": {
     "message": "显示手势路径",
-    "description": "Display gesture path"
+    "description": "Display gesture trace"
   },
   "settingNameGestureColor": {
     "message": "线条颜色",
@@ -112,9 +133,13 @@
     "description": "center"
   },
 
+  "settingDescriptionMouseButton": {
+    "message": "The mouse button which will trigger the gesture.",
+    "description": "The mouse button which will trigger the gesture."
+  },
   "settingDescriptionDisplayGesture": {
     "message": "绘出鼠标移动的路径。",
-    "description": "Draws a path to display the mouse movement."
+    "description": "Draws a trace to display the mouse movement."
   },
   "settingDescriptionGestureOpacity": {
     "message": "允许 0 (不可见) 至 1 (可见) 之间的任何值。",
@@ -290,6 +315,30 @@
     "message": "搜索选中文本",
     "description": "Search selected text"
   },
+  "actionNameRemoveRight": {
+    "message": "Remove right tabs",
+    "description": "Remove right tabs"
+  },
+  "actionNameRemoveLeft": {
+    "message": "Remove left tabs",
+    "description": "Remove left tabs"
+  },
+  "actionNameRemoveOther": {
+    "message": "Remove other tabs",
+    "description": "Remove other tabs"
+  },
+  "actionNameSaveAsPDF": {
+    "message": "Saves as PDF",
+    "description": "Saves as PDF"
+  },
+  "actionNamePrint": {
+    "message": "Print",
+    "description": "Print"
+  },
+  "actionNamePrintPreview": {
+    "message": "Print Preview",
+    "description": "Print Preview"
+  },
 
   "actionDescriptionBookmark": {
     "message": "添加或移除一个书签。",
@@ -427,6 +476,30 @@
     "message": "网络搜索选中文本（目前仅 Google）",
     "description": "Starts a web search of the selected text."
   },
+  "actionDescriptionRemoveRight": {
+    "message": "Removes all tabs to the right side.",
+    "description": "Removes all tabs to the right side."
+  },
+  "actionDescriptionRemoveLeft": {
+    "message": "Removes all tabs to the left side, excluding pinned tabs.",
+    "description": "Removes all tabs to the left side, excluding pinned tabs."
+  },
+  "actionDescriptionRemoveOther": {
+    "message": "Remove all tabs except of the current tab and pinned tabs.",
+    "description": "Remove all tabs except of the current tab and pinned tabs."
+  },
+  "actionDescriptionSaveAsPDF": {
+    "message": "Saves the current page as a pdf file.",
+    "description": "Saves the current page as a pdf file."
+  },
+  "actionDescriptionPrint": {
+    "message": "Prints the current page by prompting the print dialog.",
+    "description": "Prints the current page by prompting the print dialog."
+  },
+  "actionDescriptionPrintPreview": {
+    "message": "Opens the print preview of the current page.",
+    "description": "Opens the print preview of the current page."
+  },
 
   "toggleButtonOn": {
     "message": "\\5F00",
@@ -441,7 +514,7 @@
     "message": "Clear",
     "description": "Clear"
   },
-  
+
   "recordCancelButton": {
     "message": "取消",
     "description": "Cancel"
