added rocker gesture

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -501,6 +501,23 @@
     "description": "Opens the print preview of the current tab."
   },
 
+  "extraNameRockerActive": {
+    "message": "Rocker Geste",
+    "description": "Rocker gesture"
+  },
+  "extraNameRockerRightMouseClick": {
+    "message": "Rechter Mausklick",
+    "description": "Right mouse click"
+  },
+  "extraNameRockerLeftMouseClick": {
+    "message": "Linker Mausklick",
+    "description": "Left mouse click"
+  },
+  "extraDescriptionRockerActive": {
+    "message": "Diese Geste wird entweder durch Halten der rechten Maustaste und Klick auf die linke oder umgekehrt ausgeführt.",
+    "description": "This gesture is performed either by holding the right mouse button and clicking the left or vice versa."
+  },
+
   "toggleButtonOn": {
     "message": "An",
     "description": "On - setting checked"
