--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -501,6 +501,23 @@
     "description": "Opens the print preview of the current page."
   },
 
+  "extraNameRockerActive": {
+    "message": "Rocker gesture",
+    "description": "Rocker gesture"
+  },
+  "extraNameRockerRightMouseClick": {
+    "message": "Right mouse click",
+    "description": "Right mouse click"
+  },
+  "extraNameRockerLeftMouseClick": {
+    "message": "Left mouse click",
+    "description": "Left mouse click"
+  },
+  "extraDescriptionRockerActive": {
+    "message": "This gesture is performed either by holding the right mouse button and clicking the left or vice versa.",
+    "description": "This gesture is performed either by holding the right mouse button and clicking the left or vice versa."
+  },
+
   "toggleButtonOn": {
     "message": "On",
     "description": "On - setting checked"
